[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/game/PauseScreen.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/game/Gui.gd" type="Script" id=2]

[node name="Gui" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="PauseScreen" parent="." instance=ExtResource( 1 )]
visible = false

[node name="WaveAnnouncement" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="WaveAnnouncement"]
visible = false
margin_left = 447.0
margin_top = 293.0
margin_right = 577.0
margin_bottom = 307.0
text = "Wave 1 Approaching"

[node name="GameOver" type="CenterContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GameOver"]
margin_left = 475.0
margin_top = 293.0
margin_right = 548.0
margin_bottom = 307.0
text = "Game Over"

[connection signal="unpaused" from="PauseScreen" to="." method="_on_PauseScreen_unpaused"]
